# SqurveBridge

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  design-qa.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
benchmarks/: README.md
config/: pi_models.json  reproduce_matrix.json  sys_config.json
core/: base.py  benchmark_requirements.py  data_manage.py  db_connect.py  db_path.py  engine.py  evaluate.py  log.py  trace.py  utils.py
demo/: README.md  README_EN.md  api_server.py  build_embedded_pi.sh  demo_config.yaml  deployment.py  file_to_db.py  gradio_demo.py  pi_agent_bridge.mjs  pi_api.py  pi_backend.py  requirements.txt  runtime_check.py  security.py  session_auth.py  session_credentials.py  space_server.py  start.sh  startup_config.json  stop.sh  workspace.py
demo-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: BENCHMARKS.md  GETTING_STARTED.md  REPRODUCIBILITY.md  harness-state-machine.md
evidence/: README.md
harness/: INSTALL_DESIGN.md  README.md  install_squrve_harness.sh  sync-from-claude.sh  update_squrve_harness.sh
pi/: SQURVEBRIDGE_UPSTREAM.md
reproduce/: README.md  __init__.py  batch_run.py  run.py
templates/: README.md
tests/: __init__.py  pi_agent_bridge.test.mjs  test_anonymity_scan.py  test_benchmark_failures.py  test_benchmarks.py  test_checkpoint_paths.py  test_completion_limits.py  test_demo_deployment.py  test_demo_runtime_check.py  test_demo_security.py  (+17 more)
(+468 files in other folders)
